- Fix: Richtext without focusMenu on small devices overlaps previous sibling

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -624,7 +624,9 @@
 }
 
 @media screen and (max-width: 768px) {
-  .ProseMirror-menubar {
-    margin-top: -45px;
+  .ProsemirrorEditor.focusMenu {
+    .ProseMirror-menubar {
+      margin-top: -45px;
+    }
   }
 }
